# plan-failure-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: models.example.json  models.json
docs/: seed_review.md
environments/: house_01.json  house_01.obfuscation.json  office_01.json  office_01.obfuscation.json
instructions/: seeds_house_01.json  seeds_office_01.json
paper/: Makefile  STATUS.md  paper.tex  references.bib
plan_failure_bench/: __init__.py  adapter.py  checker.py  differential.py  dsl.py  extraction.py  instructions.py  loader.py  metrics.py  obfuscation.py  pddl.py  prompts.py  reachability.py  render.py  rescore.py  runner.py  schema.py
prompts/: task_prompt.txt  task_prompt_format_last.txt  task_prompt_only_json.txt
results/: gemini_flash_lite_obfuscated.jsonl  gemini_flash_lite_office_obfuscated.jsonl  gemini_flash_lite_office_plain.jsonl  gemini_flash_lite_plain.jsonl  gemini_flash_plain.jsonl  groq_llama70b_obfuscated.jsonl  groq_llama70b_plain.jsonl  local_qwen_obfuscated.jsonl  local_qwen_obfuscated_v2.jsonl  local_qwen_office_obfuscated.jsonl  local_qwen_office_plain.jsonl  local_qwen_plain.jsonl
tests/: test_adapter.py  test_checker.py  test_differential.py  test_dsl.py  test_metrics.py  test_obfuscation.py  test_pddl.py  test_prompts.py  test_reachability.py  test_rescore.py  test_runner.py  test_schema.py  test_seeds.py
tools/: build_paper_results.py  build_results_figure.py  build_seed_review.py
